--- a/src/viewtransaction/viewTransaction.html
+++ b/src/viewtransaction/viewTransaction.html
@@ -1,9 +1,9 @@
-<div class='view-transaction-dialog ltr-direction'>
+<div class='view-transaction-dialog ltr-direction' id="content">
   <p class='longcode' rv-text='longcode'></p>
-  <ul class='tabs'>
-      <li rv-class-active="route.value | eq 'table'" rv-on-click="route.update | bind 'table'"> Table </li>
-      <li rv-if="table.contract_type | not-eq 'SPREAD'" rv-class-active="route.value | eq 'chart'" rv-on-click="route.update | bind 'chart'"> Chart </li>
-      <li rv-class-active="route.value | eq 'explanation'" rv-on-click="route.update | bind 'explanation'"> Explanation </li>
+  <ul class='tm-ul tabs'>
+      <li rv-class-active="route.value | eq 'table'" rv-class-secondary-color="route.value | eq 'table'" rv-on-click="route.update | bind 'table'"> Table </li>
+      <li rv-if="table.contract_type | not-eq 'SPREAD'" rv-class-active="route.value | eq 'chart'" rv-class-secondary-color="route.value | eq 'chart'" rv-on-click="route.update | bind 'chart'"> Chart </li>
+      <li rv-class-active="route.value | eq 'explanation'" rv-class-secondary-color="route.value | eq 'explanation'" rv-on-click="route.update | bind 'explanation'"> Explanation </li>
   </ul>
   <div class="content">
 
