--- a/src/navigation/navigation.html
+++ b/src/navigation/navigation.html
@@ -27,16 +27,12 @@
 <div id="nav-menu" class="dark-blue header">
     <div class="container">
         <div class="logo-wrapper">
-            <a href="https://champion-fx.com" class="logo-parent">
-              <div class="logo">
-                <div></div>
-              </div>
-              <div class="mobile-hide binary-logo-text">
-                <div></div>
-              </div>
+            <a href="https://champion-fx.com" class="navbar__brand fx-logo">
+              <span class="fx-logo__icon--light"></span>
+              <span class="fx-logo__wordmark--light"></span>
             </a>
         </div>
-        <ul class="top-nav-menu mobile-hide">
+        <ul class="top-nav-menu">
             <li class="trade ltr-direction">
               <a href="javascript:;" class="nav-dropdown-toggle">
                 Trade
